# secure-messenger

./: .dockerignore  .gitignore  Dockerfile  Procfile  README.md  alembic.ini  messenger.db  pyproject.toml  requirements.txt  seed.py  test_messenger.db
client/: client.py
client-app/: index.html  package-lock.json  package.json  vite.config.js
client-app/src/: App.jsx  api.js
client-app/src/components/: useStream.js
client-app/src/pages/: Chat.jsx  Login.jsx  Register.jsx
migrations/: env.py
migrations/versions/: 4073d9c9a591_add_email_to_users.py  88cebf3b65d2_make_email_required.py
server/: auth.py  crypto.py  database.py  dependencies.py  exceptions.py  logging_config.py  main.py  models.py  routes.py
server/core/: __init__.py  auth.py  broadcaster.py  crypto.py  membership_cache.py
server/models/: __init__.py  group.py  group_join_request.py  group_member.py  group_message.py  message.py  user.py
server/repositories/: __init__.py  group_repository.py  message_repository.py  user_repository.py
server/routers/: __init__.py  auth_router.py  group_router.py  message_router.py  stream_router.py
server/schemas/: __init__.py  auth_schemas.py  group_schemas.py  message_schemas.py
server/services/: __init__.py  auth_service.py  group_service.py  message_service.py
tests/: conftest.py  test_app.py
tests/integration/: test_integration.py
tests/unit/: test_unit.py
