[project]
name = "secure-messenger"
version = "0.1.0"
description = "Secure Messenger backend"
readme = "README"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
    "sqlalchemy==2.0.30",
    "bcrypt==4.2.1",
    "python-jose[cryptography]==3.3.0",
    "cryptography==42.0.7",
    "sse-starlette==2.1.0",
    "httpx==0.27.0",
    "alembic",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.0",
    "pytest-asyncio==0.23.6",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
